# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  README.md  app-with-dev-tools.sh  dot_gitconfig  dot_hyper.js  dot_zshrc  run_once_9_mac.sh.tmpl  run_once_after_install-packages.sh  run_once_before_install-packages-darwin.sh.tmpl  run_once_install-packages.sh
code/my-knowledge-wiki/: package.json
sample_files/: sample_eslint.json  sample_package.json
sample_files/sample-pyproj/: pyproject.toml
