[tool.poetry]
name = "discuss-pdf"
version = "0.1.0"
description = "Discuss the contents of a pdf with a LLM"
authors = ["Jack Dewinter <jackdewinter1@gmail.com>"]
readme = "README.md"
packages = [{include = "discuss_pdf"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.184"
openai = "^0.27.7"
promptlayer = "^0.1.83"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
